# globalsplat

./: .gitignore  ADDITIONAL_TERMS.md  CITATION.cff  LICENSE  NOTICE.md  README.md  ablate_resolution.py  index.html  install.sh  pyproject.toml
assets/data/: compactness_re10k.json  interactive_comparison_acid.json  interactive_comparison_acid_include_internal.json  interactive_comparison_pointcloud.json  interactive_comparison_re10k.json  interactive_comparison_re10k_include_internal.json  interactive_comparison_ultra_compact.json
assets/eval_index/acid/: c3g_acid_ctx_12v_trg_3v.json  c3g_acid_ctx_24v_trg_3v.json  c3g_acid_ctx_36v_trg_3v.json
assets/eval_index/re10k/: c3g_re10k_ctx_12v_trg_3v.json  c3g_re10k_ctx_24v_trg_3v.json  c3g_re10k_ctx_36v_trg_3v.json
config/: README.md  main.yaml
config/dataset/: acid.yaml  acid_eval_ctx12.yaml  acid_eval_ctx24.yaml  acid_eval_ctx36.yaml  dl3dv.yaml  re10k.yaml  re10k_eval_ctx12.yaml  re10k_eval_ctx24.yaml  re10k_eval_ctx36.yaml
config/experiment/: dl3dv.yaml  re10k_16k.yaml  re10k_2k.yaml  re10k_32k.yaml
config/loss/: default.yaml
config/model/: globalsplat.yaml
config/trainer/: default.yaml
demo/: README.md  demo_index.json  export_demo.py  ply_io.py  run_demo.py
demo/scenes/322261824c4a3003/: 322261824c4a3003.ply  cameras.json
demo/scenes/5aca87f95a9412c6/: 5aca87f95a9412c6.ply  cameras.json
demo/scenes/ffa95c3b40609c76/: cameras.json  ffa95c3b40609c76.ply
docs/: EVALUATION.md  INSTALL.md  TRAINING.md  TROUBLESHOOTING.md
globalsplat/: checkpointing.py  main.py  selfcheck.py
globalsplat/dataset/: data_module.py  dl3dv.py  preprocessing.py  re10k.py
globalsplat/loss/: frustum_loss.py  rendering_loss.py
globalsplat/misc/: geometry.py  pose_encoding.py
globalsplat/model/: globalsplat.py  model_wrapper.py  optim.py  rendering.py  types.py
globalsplat/model/decoder/: gaussian_decoder.py
globalsplat/model/encoder/: dual_stream.py  layers.py
globalsplat/model/encoder/backbone_layers/: __init__.py
src/css/: _overrides.css  base.css  components.css  layout.css  sections.css  style.css  themes.css  tokens.css  video-container-sizes.css
src/css/components/: bibtex.css  buttons.css  comparison.css  index.css  qualitative-video-comparison.css  results.css  reveal.css  spinner.css  tables.css  teaser.css  topnav.css  twentytwenty.css
src/css/themes/: theme-glass-main.css  theme-glass_extended.css
src/fonts/: fonts.css
src/js/: comparisonSlider.js  exportPdf.js  jquery.event.move.js  jquery.twentytwenty.js  main.js  qualitativeModelSwitcher.js  qualitativeVideoComparison.js  scrollReveal.js  scrollSpy.js  tableCarousel.js  tableFragments.js  twentytwentyInit.js  video.js  videoLoaded.js
src/one_vid_sync/: atlas_compare.css  atlas_compare.js  atlas_compare_skin.css  one_video_triplet_canvas.js
src/tables/: ablation_re10k.html  acid_generalization.html  compactness_tradeoff_re10k.html  efficiency_24views.html  re10k_extended_quantitative.html  re10k_quantitative.html
tests/: conftest.py  test_logging.py  test_optim.py  test_resumable_loader.py  test_resume_and_checkpoint.py  test_stage_schedule.py  test_versioning.py
